Updated Gatling test doc.